--- a/index.html
+++ b/index.html
@@ -44,6 +44,58 @@
             <div class="box six__box-three"></div>
         </div>
     </div>
+    <div class="page__two">
+        <div class="container">
+            <div class="square square-one">
+                <div class="transparent">
+                    <div class="circle one__circle-one"></div>
+                    <div class="circle one__circle-two"></div>
+                    <div class="circle one__circle-three"></div>
+                    <div class="circle one__circle-four"></div>
+                    <div class="circle one__circle-five"></div>
+                </div>
+            </div>
+            <div class="square square-two red">
+                <div class="transparent transparent-two">
+                    <div class="circle two__circle-one"></div>
+                    <div class="circle two__circle-two"></div>
+                    <div class="circle two__circle-three"></div>
+                    <div class="circle two__circle-four"></div>
+                    <div class="circle two__circle-five"></div>
+                </div>
+            </div>
+            <div class="square square-three">
+                <div class="transparent transparent-three">
+                    <div class="circle three__circle-one"></div>
+                    <div class="circle three__circle-two"></div>
+                    <div class="circle three__circle-three"></div>
+                    <div class="circle three__circle-four"></div>
+                    <div class="circle three__circle-five"></div>
+                    <div class="circle three__circle-six"></div>
+                </div>
+            </div>
+            <div class="square square-four red">
+                <div class="transparent transparent-four">
+                    <div class="circle four__circle-one"></div>
+                    <div class="circle four__circle-two"></div>
+                    <div class="circle four__circle-three"></div>
+                    <div class="circle four__circle-four"></div>
+                    <div class="circle four__circle-five"></div>
+                    <div class="circle four__circle-six"></div>
+                </div>
+            </div>
+            <div class="square square-five">
+                <div class="transparent transparent-five">
+                    <div class="circle five__circle-one"></div>
+                    <div class="circle five__circle-two"></div>
+                    <div class="circle five__circle-three"></div>
+                    <div class="circle five__circle-four"></div>
+                    <div class="circle five__circle-five"></div>
+                    <div class="circle five__circle-six"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
