--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
     <div class="page__two">
         <div class="container">
             <div class="square square-one">
-                <div class="transparent">
-                    <div class="circle one__circle-one"></div>
-                    <div class="circle one__circle-two"></div>
-                    <div class="circle one__circle-three"></div>
-                    <div class="circle one__circle-four"></div>
-                    <div class="circle one__circle-five"></div>
-                </div>
+                <div class="circle one__circle-one"></div>
+                <div class="circle one__circle-two"></div>
+                <div class="circle one__circle-three"></div>
+                <div class="circle one__circle-four"></div>
+                <div class="circle one__circle-five"></div>
             </div>
             <div class="square square-two red">
                 <div class="transparent transparent-two">
@@ -74,7 +72,7 @@
                     <div class="circle three__circle-six"></div>
                 </div>
             </div>
-            <div class="square square-four red">
+            <div class="square square-four">
                 <div class="transparent transparent-four">
                     <div class="circle four__circle-one"></div>
                     <div class="circle four__circle-two"></div>
